# openapi-generator-haskell-auth-examples

./: .gitignore  Makefile  README.md  apikey-custom-monad.yaml  apikey.yaml  basic.yaml  bearer.yaml  custom-monad.yaml  flake.nix  noauth.yaml
apikey/: README.md  apikey-spec.cabal
apikey-custom-monad/: README.md  apikey-custom-monad-spec.cabal
apikey-custom-monad/.openapi-generator/: FILES
apikey-custom-monad/lib/ApikeyCustomMonadSpec/: API.hs  Types.hs
apikey/.openapi-generator/: FILES
apikey/lib/ApikeySpec/: API.hs  Types.hs
basic/: README.md  basic-spec.cabal
basic/.openapi-generator/: FILES
basic/lib/BasicSpec/: API.hs  Types.hs
bearer/: README.md  bearer-spec.cabal
bearer/.openapi-generator/: FILES
bearer/lib/BearerSpec/: API.hs  Types.hs
client/: openapi-test-client.cabal
client/lib/: Lib.hs
custom-monad/: README.md  custom-monad-spec.cabal
custom-monad/.openapi-generator/: FILES
custom-monad/lib/CustomMonadSpec/: API.hs  Types.hs
noauth/: README.md  noauth-spec.cabal
noauth/.openapi-generator/: FILES
noauth/lib/NoauthSpec/: API.hs  Types.hs
server/: openapi-test-server.cabal
server/app/: Apikey.hs  ApikeyCustomMonad.hs  Basic.hs  Bearer.hs  CustomMonad.hs  Noauth.hs
server/lib/: Lib.hs
